// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/invitation_modal/InvitationModalConfirmStepRow should match the snapshot for email invitation 1`] = `
<div
  className="InvitationModalConfirmStepRow"
>
  <div
    className="username-or-icon"
  >
    <MailIcon
      className="mail-icon"
    />
    <span
      className="name"
    >
      test-email@test.com
    </span>
  </div>
  <div
    className="reason"
  >
    Test reason email
  </div>
</div>
`;

exports[`components/invitation_modal/InvitationModalConfirmStepRow should match the snapshot for userinvitation 1`] = `
<div
  className="InvitationModalConfirmStepRow"
>
  <div
    className="username-or-icon"
  >
    <img
      alt="test profile image"
      className="avatar"
      src="/api/v4/users/test-id/image?_=0"
    />
    <span
      className="name"
    >
      @test - first-name last-name (test-nickname)
    </span>
  </div>
  <div
    className="reason"
  >
    Test reason user
  </div>
</div>
`;
